--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
 	<h2>Has The Government Collapsed Yet?</h2>
 	<h1>Not Yet.</h1>
-	<h3>As of 14:43, Thursday the 15th November 2018.</h3>
+	<h3>As of 17:48, Tuesday the 3rd September 2019.</h3>
 
 	<footer>
 		Updated by <a href="https://twitter.com/jamescun">@jamescun</a>
